First attempt to retrieve notifications from Orion Context Broker.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# DB CONFIGURATION
 spring.datasource.url=jdbc:mysql://192.168.99.100/whrtestservice
 spring.datasource.username=root
 spring.datasource.password=test_pass
@@ -9,10 +10,12 @@ mybatis.type.mapper-locations=it.eng.zerohqt.dao.mapper
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.default-fetch-size=100
 mybatis.configuration.default-statement-timeout=30
+# ORION CONFIGURATION
 orion.server.url=http://192.168.99.100:1026/
 orion.token=
 orion.service=whrTestservice
 orion.service.path=/whrTestsubservice
-orion.reference=http://10.0.0.200:8080/notify
+orion.reference=http://a20a38bf.ngrok.io/accumulate
+# LOGGING CONFIGURATION
 logging.level.root=INFO
 logging.level.sample.mybatis.mapper=INFO
