--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,11 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.default-fetch-size=100
 mybatis.configuration.default-statement-timeout=30
 # ORION CONFIGURATION
-orion.server.url=http://192.168.99.100:1026/
+orion.server.url=http://161.27.159.64:8080
 orion.token=
 orion.service=whrTestservice
 orion.service.path=/whrTestsubservice
-orion.reference=http://a20a38bf.ngrok.io/accumulate
+orion.reference=http://de48db41.ngrok.io
 # LOGGING CONFIGURATION
 logging.level.root=INFO
 logging.level.sample.mybatis.mapper=INFO
