--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-# DB CONFIGURATION
-spring.datasource.url=jdbc:mysql://192.168.99.100/whrtestservice
+spring.datasource.url=jdbc:mysql://localhost/whrtestservice
 spring.datasource.username=root
-spring.datasource.password=test_pass
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.schema=classpath:/mybatis/import.sql
 mybatis.type-aliases-package=it.eng.zerohqt.dao.domain
@@ -10,12 +9,10 @@ mybatis.type.mapper-locations=it.eng.zerohqt.dao.mapper
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.default-fetch-size=100
 mybatis.configuration.default-statement-timeout=30
-# ORION CONFIGURATION
-orion.server.url=http://192.168.99.100:1026/
+orion.server.url=http://161.27.159.64:8080/
 orion.token=
 orion.service=whrTestservice
 orion.service.path=/whrTestsubservice
-orion.reference=http://a20a38bf.ngrok.io/accumulate
-# LOGGING CONFIGURATION
+orion.reference=http://192.168.63.62:8080/notify
 logging.level.root=INFO
 logging.level.sample.mybatis.mapper=INFO
