--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DB CONFIGURATION
-spring.datasource.url=jdbc:mysql://192.168.99.100/whrtestservice
+spring.datasource.url=jdbc:mysql://localhost/whrtestservice
 spring.datasource.username=root
 spring.datasource.password=test_pass
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -15,7 +15,7 @@ orion.server.url=http://161.27.159.64:8080
 orion.token=
 orion.service=whrTestservice
 orion.service.path=/whrTestsubservice
-orion.reference=http://de48db41.ngrok.io
+orion.reference=http://7d6174d4.ngrok.io
 # LOGGING CONFIGURATION
 logging.level.root=INFO
 logging.level.sample.mybatis.mapper=INFO
