--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#server.port = 8100
+#server.contextPath = /server
 spring.datasource.url=jdbc:mysql://localhost/whrtestservice
 spring.datasource.username=root
 spring.datasource.password=test_pass
