--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -13,7 +13,10 @@
     "angularfire": "~1.1.1",
     "angular-bootstrap-calendar": "~0.11.3",
     "components-font-awesome": "~4.3.0",
-    "ng-cordova-oauth": "~0.1.4"
+    "ng-cordova-oauth": "~0.1.4",
+    "stomp-websocket": "https://github.com/jmesnil/stomp-websocket.git#^2.3.4",
+    "sockjs-client": "https://github.com/sockjs/sockjs-client.git#^1.1.2",
+    "angular-sockjs": "https://github.com/bendrucker/angular-sockjs.git#^0.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.6",
