--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -16,7 +16,8 @@
     "ng-cordova-oauth": "~0.1.4",
     "stomp-websocket": "https://github.com/jmesnil/stomp-websocket.git#^2.3.4",
     "sockjs-client": "https://github.com/sockjs/sockjs-client.git#^1.1.2",
-    "angular-sockjs": "https://github.com/bendrucker/angular-sockjs.git#^0.1.0"
+    "angular-sockjs": "https://github.com/bendrucker/angular-sockjs.git#^0.1.0",
+    "hashmap": "https://github.com/flesler/hashmap.git#^2.0.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.6",
