--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -81,6 +81,10 @@
     "cordova-plugin-console",
     "cordova-plugin-transport-security",
     "cordova-plugin-inappbrowser",
-    "cordova-plugin-geolocation"
+    "cordova-plugin-geolocation",
+    "cordova-plugin-console",
+    "cordova-plugin-geolocation",
+    "cordova-plugin-inappbrowser",
+    "cordova-plugin-transport-security"
   ]
 }
