--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -85,6 +85,8 @@
     "cordova-plugin-console",
     "cordova-plugin-geolocation",
     "cordova-plugin-inappbrowser",
-    "cordova-plugin-transport-security"
+    "cordova-plugin-transport-security",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-inappbrowser"
   ]
 }
