--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "ZeroHQTest",
+  "name": "zerohqtest",
   "version": "1.1.0",
   "dependencies": {
-    "ionic": "~1.3.3",
+    "ionic": "~1.2.4",
     "angular-websocket": "~1.0.9",
     "ngCordova": "~0.1.18-alpha",
     "lodash": "~3.8.0",
@@ -17,7 +17,8 @@
     "stomp-websocket": "https://github.com/jmesnil/stomp-websocket.git#^2.3.4",
     "sockjs-client": "https://github.com/sockjs/sockjs-client.git#^1.1.2",
     "angular-sockjs": "https://github.com/bendrucker/angular-sockjs.git#^0.1.0",
-    "hashmap": "https://github.com/flesler/hashmap.git#^2.0.5"
+    "hashmap": "https://github.com/flesler/hashmap.git#^2.0.5",
+    "ionic-native": "^1.2.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.6",
