--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -88,6 +88,7 @@
     "cordova-plugin-inappbrowser",
     "cordova-plugin-transport-security",
     "cordova-plugin-whitelist",
-    "cordova-plugin-inappbrowser"
+    "cordova-plugin-inappbrowser",
+    "cordova-plugin-network-information"
   ]
 }
