--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-#server.port = 8100
-#server.contextPath = /server
 spring.datasource.url=jdbc:mysql://localhost/whirlpool
 spring.datasource.username=root
 spring.datasource.password=test_pass
@@ -16,5 +14,8 @@ orion.token=
 orion.service=whirlpool
 orion.service.path=/cassinetta
 orion.reference=http://192.168.62.207:8080/notify
+#http://172.16.21.102:8080/notify
+#http://192.168.62.207:8080/notify
+orion.subscriptions.refresh.timeout=10000
 logging.level.root=INFO
 logging.level.sample.mybatis.mapper=INFO
